--- a/biome.json
+++ b/biome.json
@@ -1,37 +1,219 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
-  "vcs": {
-    "enabled": true,
-    "clientKind": "git",
-    "useIgnoreFile": true
-  },
-  "files": {
-    "ignoreUnknown": true,
-    "includes": ["**", "!node_modules", "!.next", "!dist", "!build"]
-  },
-  "formatter": {
-    "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "suspicious": {
-        "noUnknownAtRules": "off"
-      }
+    "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
+    "vcs": {
+        "enabled": true,
+        "clientKind": "git",
+        "useIgnoreFile": true,
+        "defaultBranch": "main"
     },
-    "domains": {
-      "next": "recommended",
-      "react": "recommended"
+    "files": {
+        "ignoreUnknown": true,
+        "ignore": [
+            "node_modules/**",
+            ".next/**",
+            "dist/**",
+            "build/**",
+            ".vercel/**",
+            "coverage/**",
+            "*.min.js",
+            "*.min.css"
+        ],
+        "include": [
+            "**/*.ts",
+            "**/*.tsx",
+            "**/*.js",
+            "**/*.jsx",
+            "**/*.json",
+            "**/*.jsonc"
+        ]
+    },
+    "formatter": {
+        "enabled": true,
+        "indentStyle": "space",
+        "indentWidth": 2,
+        "lineEnding": "lf",
+        "lineWidth": 100,
+        "attributePosition": "auto"
+    },
+    "organizeImports": {
+        "enabled": true
+    },
+    "linter": {
+        "enabled": true,
+        "rules": {
+            "recommended": true,
+            "a11y": {
+                "recommended": true,
+                "noAriaUnsupportedElements": "error",
+                "noNoninteractiveElementToInteractiveRole": "error",
+                "useKeyWithClickEvents": "warn",
+                "useKeyWithMouseEvents": "warn"
+            },
+            "complexity": {
+                "recommended": true,
+                "noForEach": "off",
+                "noUselessConstructor": "error",
+                "useSimplifiedLogicExpression": "warn"
+            },
+            "correctness": {
+                "recommended": true,
+                "noUnusedVariables": "error",
+                "useExhaustiveDependencies": "warn",
+                "useHookAtTopLevel": "error"
+            },
+            "performance": {
+                "recommended": true,
+                "noAccumulatingSpread": "warn",
+                "noDelete": "error"
+            },
+            "security": {
+                "recommended": true,
+                "noDangerouslySetInnerHtml": "warn"
+            },
+            "style": {
+                "recommended": true,
+                "noParameterAssign": "error",
+                "useConst": "error",
+                "useExportType": "error",
+                "useImportType": "error",
+                "useNodejsImportProtocol": "error",
+                "useNumberNamespace": "error",
+                "useNamingConvention": {
+                    "level": "warn",
+                    "options": {
+                        "strictCase": false,
+                        "conventions": [
+                            {
+                                "selector": {
+                                    "kind": "variable"
+                                },
+                                "formats": [
+                                    "camelCase",
+                                    "PascalCase",
+                                    "CONSTANT_CASE"
+                                ]
+                            },
+                            {
+                                "selector": {
+                                    "kind": "function"
+                                },
+                                "formats": ["camelCase", "PascalCase"]
+                            },
+                            {
+                                "selector": {
+                                    "kind": "typeLike"
+                                },
+                                "formats": ["PascalCase"]
+                            }
+                        ]
+                    }
+                }
+            },
+            "suspicious": {
+                "recommended": true,
+                "noArrayIndexKey": "warn",
+                "noAssignInExpressions": "error",
+                "noAsyncPromiseExecutor": "error",
+                "noCatchAssign": "error",
+                "noClassAssign": "error",
+                "noCommentText": "warn",
+                "noCompareNegZero": "error",
+                "noConfusingLabels": "error",
+                "noControlCharactersInRegex": "error",
+                "noDebugger": "error",
+                "noDoubleEquals": "error",
+                "noDuplicateCase": "error",
+                "noDuplicateClassMembers": "error",
+                "noDuplicateObjectKeys": "error",
+                "noDuplicateParameters": "error",
+                "noEmptyBlockStatements": "warn",
+                "noExplicitAny": "warn",
+                "noFallthroughSwitchClause": "error",
+                "noFunctionAssign": "error",
+                "noGlobalObjectCalls": "error",
+                "noImportAssign": "error",
+                "noMisleadingCharacterClass": "error",
+                "noMisleadingInstantiator": "error",
+                "noPrototypeBuiltins": "error",
+                "noRedeclare": "error",
+                "noShadowRestrictedNames": "error",
+                "noUnsafeFinally": "error",
+                "noUnsafeNegation": "error",
+                "noUnusedLabels": "warn",
+                "noUnusedPrivateClassMembers": "warn",
+                "noUnusedTemplateLiteral": "warn",
+                "noUnusedVariables": "error",
+                "noUseBeforeDefine": "error",
+                "useGetterReturn": "error",
+                "useValidTypeof": "error"
+            },
+            "nursery": {
+                "noUnknownAtRules": "off"
+            }
+        },
+        "domains": {
+            "next": "recommended",
+            "react": "recommended"
+        }
+    },
+    "javascript": {
+        "formatter": {
+            "jsxQuoteStyle": "double",
+            "quoteProperties": "asNeeded",
+            "trailingCommas": "es5",
+            "semicolons": "always",
+            "arrowParentheses": "always",
+            "bracketSpacing": true,
+            "bracketSameLine": false,
+            "quoteStyle": "double",
+            "attributePosition": "auto"
+        },
+        "globals": ["React", "JSX"],
+        "parser": {
+            "unsafeParameterDecoratorsEnabled": false
+        }
+    },
+    "json": {
+        "formatter": {
+            "enabled": true,
+            "indentStyle": "space",
+            "indentWidth": 2,
+            "lineWidth": 100,
+            "trailingCommas": "none"
+        },
+        "parser": {
+            "allowComments": false,
+            "allowTrailingCommas": false
+        }
+    },
+    "overrides": [
+        {
+            "include": ["*.config.ts", "*.config.js", "next.config.*"],
+            "formatter": {
+                "lineWidth": 120
+            }
+        },
+        {
+            "include": [
+                "**/*.test.ts",
+                "**/*.test.tsx",
+                "**/*.spec.ts",
+                "**/*.spec.tsx"
+            ],
+            "linter": {
+                "rules": {
+                    "suspicious": {
+                        "noExplicitAny": "off"
+                    }
+                }
+            }
+        }
+    ],
+    "assist": {
+        "actions": {
+            "source": {
+                "organizeImports": "on"
+            }
+        }
     }
-  },
-  "assist": {
-    "actions": {
-      "source": {
-        "organizeImports": "on"
-      }
-    }
-  }
 }
