--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
+    "@types/luxon": "^3.7.1",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
+    "luxon": "^3.7.2",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
